--- a/CursoNgRx/src/app/componentes/usuario/main/main.component.html
+++ b/CursoNgRx/src/app/componentes/usuario/main/main.component.html
@@ -6,4 +6,9 @@
             <app-listagem-user></app-listagem-user>
         </div>
     </div>
+    <div class="row">
+        <div class="col col-md-12">
+            <app-cadastro-user></app-cadastro-user>
+        </div>
+    </div>
 </div>
