--- a/CursoNgRx/src/app/componentes/usuario/listagem-user/listagem-user.component.html
+++ b/CursoNgRx/src/app/componentes/usuario/listagem-user/listagem-user.component.html
@@ -15,7 +15,7 @@
     </thead>
     <tbody>
         <!-- <tr *ngFor="let usuario of usuarios$ | async"> -->
-        <tr *ngFor="let usuario of usuarios">
+        <tr *ngFor="let usuario of listaUsuarios$ | async">
             <td>{{usuario.id}}</td>
             <td>{{usuario.nome}}</td>
             <td>{{usuario.idade}}</td>
