17. Removendo registro com NGRX

--- a/CursoNgRx/src/app/componentes/usuario/listagem-user/listagem-user.component.html
+++ b/CursoNgRx/src/app/componentes/usuario/listagem-user/listagem-user.component.html
@@ -34,7 +34,7 @@
       </td>
 
       <td>
-        <button class="btn btn-danger" (click)="excluir(usuario.id)">
+        <button class="btn btn-danger" type="button" (click)="excluir(usuario.id)">
           Excluir
         </button>
       </td>
