--- a/CursoNgRx/src/app/componentes/usuario/main/main.component.html
+++ b/CursoNgRx/src/app/componentes/usuario/main/main.component.html
@@ -1,11 +1,19 @@
 <p>main works!</p>
 
 <div class="container">
+    
+    <div class="row">
+        <div class="col col-md-12">
+            <app-lista-user-admin></app-lista-user-admin>
+        </div>
+    </div>
+    <hr>
     <div class="row">
         <div class="col col-md-12">
             <app-listagem-user></app-listagem-user>
         </div>
     </div>
+    <hr>
     <div class="row">
         <div class="col col-md-12">
             <app-cadastro-user></app-cadastro-user>
