--- a/teste-unitario/src/app/shared/banking/banking.component.html
+++ b/teste-unitario/src/app/shared/banking/banking.component.html
@@ -4,15 +4,13 @@
 </p>
 
 <p>
-    Poupança: R$ {{ getPoupanca }}
-    <input type="text" #sacar >
-    <button (click)="setSacar(sacar.value)">Sacar</button>
+    Poupança: R$ <span id="get-poupanca">{{ getPoupanca }}</span>
+    <input id="input-sacar" type="text" #sacar >
+    <button id="sacar" (click)="setSacar(sacar.value)">Sacar</button>
 </p>
+
 <p>
-    Conta Corrente: R$ {{ contaCorrente }}
-</p>
-<p>
-    Carteira: R$ {{ getCarteira }}
-    <input type="text" #depositar >
-    <button (click)="setDepositar(depositar.value)">Depositar</button>
+    Carteira: R$ <span id="get-carteira">{{ getCarteira }}</span>
+    <input id="input-depositar" type="text" #depositar >
+    <button id="depositar" (click)="setDepositar(depositar.value)">Depositar</button>
 </p>
