--- a/teste-unitario/src/app/shared/banking/banking.component.html
+++ b/teste-unitario/src/app/shared/banking/banking.component.html
@@ -14,3 +14,7 @@
     <input id="input-depositar" type="text" #depositar >
     <button id="depositar" (click)="setDepositar(depositar.value)">Depositar</button>
 </p>
+
+<hr>
+
+<app-list></app-list>
