--- a/teste-unitario/src/app/shared/investments/components/list/list.component.html
+++ b/teste-unitario/src/app/shared/investments/components/list/list.component.html
@@ -2,6 +2,6 @@
 
 <ul>
     <li *ngFor="let items of investments" class="list-item">
-        {{ items.name }} - {{ items.value | currency:'BRL':'symbol':'1.2-2' }}
+        {{ items.name }} - {{ items.value }} <!--  | currency:'BRL':'symbol':'1.2-2' -->
     </li>
 </ul>
