--- a/CursoAuthenticationJWT/authentication-front/src/scss/base/_base.scss
+++ b/CursoAuthenticationJWT/authentication-front/src/scss/base/_base.scss
@@ -1,5 +1,5 @@
 // importando as fonts roboto
-@import url('https://fonts.googleapis.com/css2?family=Roboto:100,300,400,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:100,300,400,500,700&display=swap');
 
 // Fazendo reset
 *{
@@ -13,7 +13,7 @@
 
 body{
     height: 100vh;
-    background: url("~/src/assets/FundoParaAularJWT.jpg") no-repeat center center fixed;
+    background: url("../../assets/FundoParaAularJWT.jpg") no-repeat center center fixed;
     background-size: cover;
 
     display: flex;
