--- a/CursoAuthenticationJWT/authentication-front/src/scss/layout/_container.scss
+++ b/CursoAuthenticationJWT/authentication-front/src/scss/layout/_container.scss
@@ -2,9 +2,12 @@
   width: 500px;
   min-height: 370px;
 
-  padding: 25px 40px;
+  // padding: 25px 25px 25px 25px;
+  padding: 25px;
+  margin-top: -25px;
+  margin-bottom: -25px;
   background: $branco;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.25);
   box-sizing: border-box;
   border-radius: 10px;
 
