1) - Ajustes na cor do botão 2) - Ajustes no font-size e padding 3) - Importando o arquivo _msg.scss no index.scss principal 4) - Ajuste na propriedade border e cursor no-drop em _base.scss 5) - Criação do arquivo _msg.scss

--- a/CursoAuthenticationJWT/authentication-front/src/app/core/components/auth/pages/sign/sign.component.html
+++ b/CursoAuthenticationJWT/authentication-front/src/app/core/components/auth/pages/sign/sign.component.html
@@ -16,7 +16,7 @@
     </form>
 
     <!--ngIf pra esconder-->
-    <span *ngIf="false" style="color: crimson;">
+    <span *ngIf="true" class="msg-error">
         <p>Usuário ou senha incorreta!</p>
     </span>
 
