--- a/CursoAuthenticationJWT/authentication-front/src/app/core/components/auth/pages/sign/sign.component.scss
+++ b/CursoAuthenticationJWT/authentication-front/src/app/core/components/auth/pages/sign/sign.component.scss
@@ -24,14 +24,15 @@
             width: 20px;
             height: 20px;
             margin-right: 10px;
-        }
+        } 
 
         input::placeholder{
             height: 50px;
             border: none;
             margin: 20px;
-            font-size: 16px;
-            font-weight: 300;
+            font-size: 17px;
+            padding: 10px;
+            // font-weight: 300;
             color: $preto;            
             &::placeholder{
                 color: $preto;
