--- a/CursoAuthenticationJWT/authentication-front/src/scss/base/_base.scss
+++ b/CursoAuthenticationJWT/authentication-front/src/scss/base/_base.scss
@@ -5,6 +5,7 @@
 *{
     margin: 0;
     padding: 0;
+    border: 0;
     outline: none;
     font-family: "Roboto", sans-serif;
     font-style: normal;
