--- a/CursoAuthenticationJWT/authentication-front/src/scss/layout/_btn.scss
+++ b/CursoAuthenticationJWT/authentication-front/src/scss/layout/_btn.scss
@@ -7,12 +7,12 @@
     color: white;
     border-radius: 5px;
     padding: 5px;
-    border: none;
+    border: 0;
     cursor: pointer;
     font-size: 1rem;
     font-weight: bold;
     &:disabled{
-        cursor: not-allowed;
+        cursor: no-drop;
         background-color: darken(red, 20%);
     }
 }
