1) - Ajustes e inclusão de propriedades scss 2) - Ajustes e criação do componente de 'Logado com Sucesso!'

--- a/CursoAuthenticationJWT/authentication-front/src/app/components/admin/pages/home/home.component.html
+++ b/CursoAuthenticationJWT/authentication-front/src/app/components/admin/pages/home/home.component.html
@@ -1,1 +1,23 @@
-<p>home works!</p>
+<div class="container">
+    <img src="assets/Angular.png" alt="logo">
+
+    <strong>Logado com Sucesso !</strong>
+
+    <!-- <form>
+        <h2>Sign in</h2>
+        <label class="input-field">
+            <img src="assets/Vector.svg" alt="user">
+            <input type="email" placeholder="E-mail" required>
+        </label>
+
+        <label class="input-field">
+            <img src="assets/cadeado.svg" alt="lock">
+            <input type="password" placeholder="Password">
+        </label>
+        
+    </form> -->
+    
+    
+    <button type="button" class="btn-vermelho">Logout</button>
+
+</div>
