[ Autenticação-JWT ] - Autenticação com JWT no Angular

--- a/CursoAuthenticationJWT/authentication-front/src/app/components/admin/pages/home/home.component.html
+++ b/CursoAuthenticationJWT/authentication-front/src/app/components/admin/pages/home/home.component.html
@@ -17,7 +17,7 @@
         
     </form> -->
     
-    
-    <button type="button" class="btn-vermelho">Logout</button>
+    <!-- passoService - 14 - aplicando a chamada da função de logout() -->
+    <button type="button" class="btn-vermelho" (click)="logout()">Logout</button>
 
 </div>
