--- a/teste-unitario/src/app/shared/banking/banking.component.html
+++ b/teste-unitario/src/app/shared/banking/banking.component.html
@@ -1,47 +1,116 @@
-<table mat-table [dataSource]="dataSourceMapDatasModificado" class="mat-elevation-z8">
 
-  <ng-container *ngFor="let column of displayedColumnsModificado; let i = index" [matColumnDef]="column" >
-    <th mat-header-cell *matHeaderCellDef>{{ column }}</th>
-    <td mat-cell *matCellDef="let element">{{ element[column] }}</td>
-  </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumnsModificado"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumnsModificado"></tr>
+<div style=" padding: 50px;">
 
-</table>
+  <div>
 
-<br><br>
+    <div  style=" width: 200px; height: 70px;">
 
-<table mat-table [dataSource]="dataSourceMapDatas" class="mat-elevation-z8">
+      <mat-card >
+        <mat-label>Selecione os itens</mat-label>
+        <mat-selection-list #itensSelecionar>
+          <mat-list-option  *ngFor="let item of itensDisponiveis"    > <!--(click)="adicionarItem(item)"-->
+            {{ item.nome }}
+          </mat-list-option>
+        </mat-selection-list>
+      </mat-card>
+    </div>
 
-  <ng-container *ngFor="let column of displayedColumns; let i = index" [matColumnDef]="column" >
-    <th mat-header-cell *matHeaderCellDef>{{ column }}</th>
-    <td mat-cell *matCellDef="let element">{{ element[column] }}</td>
-  </ng-container>
+  <br><br>  <br><br>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    <div style="margin-top: 50px;">
+      <!-- 
+      <div>
+        <button mat-raised-button (click)="addTodosOsItensParaListagemDeItens()"> >> </button>
+      </div> -->
+      <div>
+        <button  style="width: 70px; height: 20px; background-color: rgb(62, 231, 175);" mat-raised-button (click)="adicionarItensSelecionados()"> > </button>
+      </div>
+      <div>
+        <button  style="width: 70px; height: 20px; background-color: rgb(62, 231, 175);" mat-raised-button (click)="removerItensSelecionados()"> < </button>
+      </div>
+    </div>
+    
+    <br><br>  <br><br>
+    
+    <div  style=" width: 200px; height: 70px;">
+      <mat-card>
+        <!-- <mat-label>Perfis Selecionados para este usuário</mat-label> -->
+        <mat-list>
+          <mat-list-item  *ngFor="let item of itensSelecionados" > <!-- (click)="removerItem(item)"-->
+            {{ item.nome }}
+          </mat-list-item>
+        </mat-list>
+      </mat-card>      
+    </div>
 
-</table>
+  </div>
 
-<br><br>
+  <div>
+      <button mat-raised-button (click)="SalvarPerfisEscolhidos()"> SalvarPerfisEscolhidos </button>
+    </div>
 
-<table mat-table [dataSource]="dataSourceMapDatas" class="mat-elevation-z8">
+</div>
 
-  <!-- <ng-container *ngFor="let column of displayedColumns; let i = index" [matColumnDef]="column" > -->
-  <ng-container matColumnDef="servico" > 
-    <th mat-header-cell *matHeaderCellDef>servico</th>
+
+<!-- 
+<table mat-table [dataSource]="dataSourceMapDatas" class="mat-elevation-z8" >
+  <ng-container matColumnDef="servico">
+    <th mat-header-cell *matHeaderCellDef>Serviço</th>
     <td mat-cell *matCellDef="let element">{{ element.servico }}</td>
   </ng-container>
-
-  <!-- <ng-container *ngFor="let column of displayedColumns; let i = index" [matColumnDef]="column" > -->
-  <ng-container matColumnDef="dadosPorDia" > 
-    <th mat-header-cell *matHeaderCellDef>dadosPorDia</th>
-    <td mat-cell *matCellDef="let element">{{ element.dadosPorDia.data }}</td>
+  <ng-container *ngFor="let dia of dias" [matColumnDef]="dia">
+    <th mat-header-cell *matHeaderCellDef>{{ dia }}</th>
+    <td mat-cell *matCellDef="let element">{{ getDiasValores(element, dia) }}</td>
   </ng-container>
-
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-
+  <tr mat-header-row *matHeaderRowDef="dias"></tr>
+  <tr mat-row *matRowDef="let row; columns: dias"></tr>
 </table>
+<br><br> 
+-->
 
+<!--
+
+
+  bom dia gpt!  Eu tenho estes dados como contexto:
+" {
+    "servico": "detran_acompanhamento_cnh",
+    "01/08": 0,
+    "02/08": 0,
+    "03/08": 0,
+    "04/08": 25,
+    "05/08": 2,
+    "06/08": 7,
+    "07/08": 45
+  }", e preciso renderiza-los em uma tabela assim:  
+  "
+  | Serviço                     | 01/08 | 02/08 | 03/08 | 04/08 | 05/08 | 06/08 | 07/08 |
+  | detran_acompanhamento_cnh   | 0     | 0     | 0     | 25    | 2     | 7     | 45 |
+  | detran_acompanhamento_crlv  | 0     | 0     | 0     | 25    | 2     | 7     | 45 |
+  | detran_acompanhamento_cnh   | 0     | 0     | 0     | 25    | 2     | 7     | 45 |
+  | detran_acompanhamento_crlv  | 0     | 0     | 0     | 25    | 2     | 7     | 45 |
+  | detran_acompanhamento_cnh   | 0     | 0     | 0     | 25    | 2     | 7     | 45 |
+  | detran_acompanhamento_crlv  | 0     | 0     | 0     | 25    | 2     | 7     | 45 |
+  | detran_acompanhamento_cnh   | 0     | 0     | 0     | 25    | 2     | 7     | 45 |",
+
+  onde o nome das colunas são as datas e o nome das linhas são os serviços.
+  Eu tentei fazer assim:  
+  "<table mat-table [dataSource]="dataSourceMapDatas" class="mat-elevation-z8">
+      <ng-container matColumnDef="servico">
+              <th mat-header-cell *matHeaderCellDef> Serviço </th>
+              <td mat-cell *matCellDef="let elemento"> {{ elemento.servico }} </td>
+      </ng-container>  
+      <ng-container *ngFor="let data of ['01/08', '02/08', '03/08', '04/08',  '05/08', '06/08', '07/08', '08/08',  '09/08', '10/08', '11/08', '12/08',  '13/08', '14/08', '15/08',  '16/08', '17/08', '18/08', '19/08',  '20/08', '21/08', '22/08', '23/08',  '24/08', '25/08', '26/08', '27/08',  '28/08', '29/08', '30/08', '31/08']" [matColumnDef]="data">
+              <th mat-header-cell *matHeaderCellDef> {{ data }} </th>
+              <td mat-cell *matCellDef="let elemento"> {{ elemento[data] }} </td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="['servico', '01/08', '02/08', '03/08', '04/08',  '05/08', '06/08', '07/08', '08/08',  '09/08', '10/08', '11/08', '12/08',  '13/08', '14/08', '15/08',  '16/08', '17/08', '18/08', '19/08',  '20/08', '21/08', '22/08', '23/08',  '24/08', '25/08', '26/08', '27/08',  '28/08', '29/08', '30/08', '31/08']"></tr>
+      <tr mat-row *matRowDef="let linha; columns: ['servico', '01/08', '02/08', '03/08', '04/08',  '05/08', '06/08', '07/08', '08/08',  '09/08', '10/08', '11/08', '12/08',  '13/08', '14/08', '15/08',  '16/08', '17/08', '18/08', '19/08',  '20/08', '21/08', '22/08', '23/08',  '24/08', '25/08', '26/08', '27/08',  '28/08', '29/08', '30/08', '31/08']">
+
+      </tr>
+</table>",  
+  mas não deu certo, pode me ajudar a extrair os valores correspondentes para cada data?
+
+
+
+-->
